<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bottom_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_bottom_my_rides"
            android:icon="@drawable/ic_car"
            android:title="@string/my_rides"/>
        <item
            android:id="@+id/nav_bottom_rate_ride"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_ride"/>
        <item
            android:id="@+id/nav_bottom_ride_tracking"
            android:icon="@drawable/ic_navigation_arrow"
            android:title="@string/ride_tracking"/>
        <item
            android:id="@+id/nav_bottom_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_favorites"
            android:icon="@drawable/ic_home"
            android:title="@string/favorite_routes"/>
        <item
            android:id="@+id/nav_drawer_support"
            android:icon="@drawable/ic_profile"
            android:title="@string/live_support"/>
        <item
            android:id="@+id/nav_drawer_reports"
            android:icon="@drawable/ic_car"
            android:title="@string/generate_reports"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_drawer_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications"/>
            <item
                android:id="@+id/nav_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_drawer_logout"
                android:icon="@drawable/ic_home"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>