<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bottom_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard"/>
        <!-- admin My Rides -->
        <item
            android:id="@+id/nav_bottom_my_rides"
            android:icon="@drawable/ic_car"
            android:title="@string/my_rides"/>
        <item
            android:id="@+id/nav_bottom_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_bottom_reports"
            android:icon="@drawable/ic_car"
            android:title="@string/reports"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_panic"
            android:icon="@drawable/ic_home"
            android:title="@string/panic_notifications"/>
        <item
            android:id="@+id/nav_drawer_pricing"
            android:icon="@drawable/ic_settings"
            android:title="@string/manage_pricing"/>
        <item
            android:id="@+id/nav_drawer_search"
            android:icon="@drawable/ic_home"
            android:title="@string/reports"/>
        <item
            android:id="@+id/nav_drawer_support_chats"
            android:icon="@drawable/ic_profile"
            android:title="@string/support_chats"/>
        <item
            android:id="@+id/nav_review_requests"
            android:icon="@drawable/ic_settings"
            android:title="@string/driver_requests"
            />
        <item
            android:id="@+id/nav_drawer_active_rides"
            android:icon="@drawable/ic_car"
            android:title="Active rides"/>



        <item
            android:id="@+id/nav_register_driver"
            android:icon="@drawable/ic_settings"
            android:title="@string/driver_register"
            />


    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_drawer_logout"
                android:icon="@drawable/ic_home"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>