<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_reports"
            android:icon="@drawable/ic_car"
            android:title="@string/generate_reports"/>
        <item
            android:id="@+id/nav_drawer_support"
            android:icon="@drawable/ic_profile"
            android:title="@string/live_support"/>
        <item
            android:id="@+id/nav_drawer_active_hours"
            android:icon="@drawable/ic_home"
            android:title="@string/active_hours"/>
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_drawer_logout"
                android:icon="@drawable/ic_home"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>